--- a/client-app/pyproject.toml
+++ b/client-app/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "fastapi (>=0.115.7,<0.116.0)",
     "uvicorn (>=0.34.0,<0.35.0)",
     "jinja2 (>=3.1.5,<4.0.0)",
-    "python-multipart (>=0.0.20,<0.0.21)"
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "itsdangerous (>=2.2.0,<3.0.0)"
 ]
 
 
