--- a/auth-server/pyproject.toml
+++ b/auth-server/pyproject.toml
@@ -17,10 +17,25 @@ dependencies = [
     "databases[aiosqlite] (>=0.9.0,<0.10.0)",
     "jinja2 (>=3.1.5,<4.0.0)",
     "pydantic-settings (>=2.7.1,<3.0.0)",
-    "python-multipart (>=0.0.20,<0.0.21)"
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "itsdangerous (>=2.2.0,<3.0.0)"
 ]
 
+[tool.poetry]
+package-mode = true
+packages = [
+    { include = "app" }
+]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
+fastapi = {extras = ["testing"], version = "^0.115.7"}
+httpx = "^0.28.1"
+pytest-asyncio = "^0.25.2"
+
+[virtualenvs]
+in-project = true
