refactor(auth): routers分割

--- a/auth-server/.vscode/launch.json
+++ b/auth-server/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -11,11 +8,13 @@
             "module": "uvicorn",
             "args": [
                 "app.main:app",
-                "--reload"
+                "--reload",
+                "--port",
+                "8000"
             ],
             "jinja": true,
             "justMyCode": true,
-            "cwd": "${workspaceFolder}/auth-server"
+            "cwd": "${workspaceFolder}"
         }
     ]
 }
