--- a/client-app/pyproject.toml
+++ b/client-app/pyproject.toml
@@ -12,10 +12,18 @@ dependencies = [
     "uvicorn (>=0.34.0,<0.35.0)",
     "jinja2 (>=3.1.5,<4.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
-    "itsdangerous (>=2.2.0,<3.0.0)"
+    "itsdangerous (>=2.2.0,<3.0.0)",
+    "sqlalchemy (>=2.0.37,<3.0.0)",
+    "python-dotenv (>=1.0.1,<2.0.0)",
+    "httpx (>=0.28.1,<0.29.0)",
+    "pydantic-settings (>=2.7.1,<3.0.0)",
+    "passlib[bcrypt] (>=1.7.4,<2.0.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[virtualenvs]
+in-project = true
