ci: ruffを依存関係に追加

--- a/auth-server/.vscode/settings.json
+++ b/auth-server/.vscode/settings.json
@@ -1,11 +1,6 @@
 {
-    "python.testing.pytestEnabled": true,
-    "python.testing.unittestEnabled": false,
-    "python.testing.pytestArgs": [
-        "./auth-server/tests"
-    ],
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
     "python.analysis.extraPaths": [
-        "."
-    ],
-    "python.defaultInterpreterPath": "./auth-server/.venv/bin/python"
+        "${workspaceFolder}"
+    ]
 }
