--- a/client-app/.vscode/settings.json
+++ b/client-app/.vscode/settings.json
@@ -1,11 +1,6 @@
 {
-    "python.testing.pytestEnabled": true,
-    "python.testing.unittestEnabled": false,
-    "python.testing.pytestArgs": [
-        "./client-app/tests"
-    ],
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
     "python.analysis.extraPaths": [
-        "."
-    ],
-    "python.defaultInterpreterPath": "./client-app/.venv/bin/python"
+        "${workspaceFolder}"
+    ]
 }
