--- a/client-app/pyproject.toml
+++ b/client-app/pyproject.toml
@@ -27,3 +27,8 @@ build-backend = "poetry.core.masonry.api"
 
 [virtualenvs]
 in-project = true
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
+ruff = "^0.3.4"
+httpx = "^0.28.1"
