--- a/client-app/pyproject.toml
+++ b/client-app/pyproject.toml
@@ -21,19 +21,33 @@ dependencies = [
 ]
 
 [tool.poetry]
-package-mode = false
-packages = [
-    { include = "app" }
-]
+name = "client-app"
+version = "0.1.0"
+description = ""
+authors = ["Your Name <you@example.com>"]
+readme = "README.md"
+packages = [{include = "app"}]
+
+[tool.poetry.dependencies]
+python = "^3.11"
+fastapi = "^0.115.7"
+uvicorn = "^0.34.0"
+sqlalchemy = "^2.0.27"
+python-multipart = "^0.0.20"
+jinja2 = "^3.1.3"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+python-dotenv = "^1.0.1"
+requests = "^2.31.0"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.0.0"
+httpx = "^0.28.1"
+ruff = "^0.2.1"
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [virtualenvs]
 in-project = true
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.3.4"
-ruff = "^0.3.4"
-httpx = "^0.28.1"
